# videoreader-ffmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
reader/: CMakeLists.txt  videoreader.cpp  videoreader.hpp
